--- a/src/index.css
+++ b/src/index.css
@@ -134,3 +134,18 @@ footer {
 a {
   text-decoration: none;
 }
+
+/*Filter*/
+
+.filter {
+  display: flex;
+  padding: 1rem;
+  margin: 1rem;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 0.1rem #c0c0c0 solid;
+}
+
+.filter div {
+  flex: 1;
+}
